fix overflowing on smaller screens

--- a/workspace/apps/pidp/src/app/features/access/pages/bc-provider-edit/bc-provider-edit.page.scss
+++ b/workspace/apps/pidp/src/app/features/access/pages/bc-provider-edit/bc-provider-edit.page.scss
@@ -28,6 +28,11 @@
       position: relative !important;
     }
   }
+  & .username {
+    & .username-overflow {
+      overflow-wrap: break-word;
+    }
+  }
   & .form-card {
     display: block !important;
     & .form-content {
